--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"zustand": "^3.7.1"
 	},
 	"devDependencies": {
+		"@types/jest": "^27.4.1",
 		"@types/react": "^17.0.43",
 		"cypress": "^9.5.2",
 		"eslint": "8.12.0",
