--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"react-query": "^3.34.19",
 		"react-redux": "^7.2.6",
 		"react-spinners": "^0.11.0",
+		"use-dark-mode": "^2.3.1",
 		"zustand": "^3.7.1"
 	},
 	"devDependencies": {
